--- a/excursion/styles.css
+++ b/excursion/styles.css
@@ -1,3 +1,6 @@
-H1 {
-    color: red;
+@font-face {
+    font-family: "Open Sans"
+    font-style: normal;
+    font-weight: 400;
+    src: url("./fonts/OpenSans-Regular.woff2") format(woff2);
 }
