--- a/excursion/styles.css
+++ b/excursion/styles.css
@@ -1,72 +1,87 @@
 @font-face {
-    font-family: "Open Sans"
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
     src: url("./fonts/OpenSans-Regular.woff2") format(woff2),
-    url("./fonts/OpenSans-Regular.woff") format(woff);
+         url("./fonts/OpenSans-Regular.woff") format(woff);
 
 }
 
 @font-face {
-    font-family: "Open Sans"
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: 700;
     src: url("./fonts/OpenSans-Bold.woff2") format(woff2),
-    url("./fonts/OpenSans-Bold.woff") format(woff);
+         url("./fonts/OpenSans-Bold.woff") format(woff);
 
 }
 
-.page-body{
+.page-body {
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
 }
 
-.intro-title{
-    font-size: 50px;
-    font-weight: bold;
+.intro {
+    background-image: url('./images/intro.png');
+    color: #fff;
 }
 
-.program-title{
+.intro-title {
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+.page-content {
+    background-image: linear-gradient(90deg, #fff 50%, #242424 50%);
+}
+
+.program-title {
      font-size: 40px;
      font-weight: 700;
 }
 
-.program-subtitle{
+.program-subtitle {
     font-size: 24px;
 }
 
-.auditory-title{
+.auditory-title {
     font-size: 40px;
     font-weight: 700;
 }
 
-.price-title{
+.price-title {
     font-size: 40px;
     font-weight: 700;
 }
 
-.price-table th{
+.price-table th {
     font-weight: 700;
+    color: #fff;
     text-align: left;
 }
 
-.price-table td{
+.price-table td {
     font-size: 16px;
 }
 
-.prices-caption{
+.prices-caption {
     font size: 14px;
+    color: #9d9d9d;
 }
 
-.service-title{
+.service-title {
     font-size: 40px;
     font-weight: 700;
 }
 
-.service-list lable{
+.service-list lable {
     font-size: 16px;
 }
 
-.service-price{
+.services-price {
+    color: #fff;
     font-size: 20px;
     font-weight: 700;
+    white-space: nowrap;
 }
