--- a/эталонное решение/CSS ЭР №6/style.css
+++ b/эталонное решение/CSS ЭР №6/style.css
@@ -2,6 +2,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Regular.woff2") format("woff2"),
         url("./fonts/OpenSans-Regular.woff") format("woff");
@@ -11,6 +12,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Bold.woff2") format("woff2"),
         url("./fonts/OpenSans-Bold.woff") format("woff");
@@ -23,7 +25,7 @@
 }
 
 .intro {
-    background-image: url("./images/intro.png");
+    background-image: url('./images/intro.png');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -62,6 +64,7 @@
 }
 
 .program-image {
+    display: block;
     object-fit: cover;
 }
 
@@ -88,6 +91,7 @@
 }
 
 .auditory-image {
+    display: block;
     object-fit: cover;
 }
 
@@ -129,6 +133,11 @@
     font-size: 16px;
 }
 
+.services-right {
+    display: flex;
+    flex-direction: column;
+}
+
 .services-price {
     color: #fff;
     font-size: 20px;
@@ -150,6 +159,7 @@
 }
 
 .reviews-item-image {
+    display: block;
     object-fit: cover;
 }
 
@@ -166,6 +176,7 @@
 }
 
 .contacts-form-bottom {
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -180,6 +191,7 @@
 
 .contacts-btn {
     position: relative;
+    display: flex;
     justify-content: space-between;
     color:#fff;
     font-size: 40px;
@@ -192,7 +204,7 @@
     position: absolute;
     top: 30px;
     right: 40px;
-    background-image: url("./images/telegram.svg");
+    background-image: url(./images/telegram.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -220,6 +232,7 @@
 }
 
 .card-image-link {
+    display: block;
     overflow: hidden;
 }
 
@@ -228,6 +241,7 @@
 }
 
 .card-image {
+    display: block;
     object-fit: cover;
 }
 
