--- a/эталонное решение/Блочная_верстка_материалы/styles.css
+++ b/эталонное решение/Блочная_верстка_материалы/styles.css
@@ -2,6 +2,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Regular.woff2") format("woff2"),
         url("./fonts/OpenSans-Regular.woff") format("woff");
@@ -11,6 +12,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Bold.woff2") format("woff2"),
         url("./fonts/OpenSans-Bold.woff") format("woff");
@@ -23,7 +25,7 @@
 }
 
 .intro {
-    background-image: url("./images/intro.png");
+    background-image: url('./images/intro.png');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -165,11 +167,6 @@
     font-size: 16px;
 }
 
-.contacts-form-bottom {
-    justify-content: space-between;
-    align-items: center;
-}
-
 .contacts-tariff-label {
     font-weight: 700;
 }
@@ -180,7 +177,6 @@
 
 .contacts-btn {
     position: relative;
-    justify-content: space-between;
     color:#fff;
     font-size: 40px;
     font-weight: 700;
@@ -192,7 +188,7 @@
     position: absolute;
     top: 30px;
     right: 40px;
-    background-image: url("./images/telegram.svg");
+    background-image: url(./images/telegram.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
