--- a/эталонное решение/Блочная_верстка_эталонное_решение/styles.css
+++ b/эталонное решение/Блочная_верстка_эталонное_решение/styles.css
@@ -2,6 +2,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Regular.woff2") format("woff2"),
         url("./fonts/OpenSans-Regular.woff") format("woff");
@@ -11,6 +12,7 @@
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src:
         url("./fonts/OpenSans-Bold.woff2") format("woff2"),
         url("./fonts/OpenSans-Bold.woff") format("woff");
@@ -41,7 +43,7 @@
 
 .intro {
     min-height: 610px;
-    background-image: url("./images/intro.png");
+    background-image: url('./images/intro.png');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -62,7 +64,7 @@
     text-shadow: 2px 2px 4px #000000;
 }
 
-.inro-text-wrapper p {
+.intro-text-wrapper p {
     margin: 0;
 }
 
@@ -224,12 +226,12 @@
 }
 
 .prices-table th:first-child,
-.prices-table th:first-child {
+.prices-table td:first-child {
     border-radius: 15px 0 0 15px;
 }
 
 .prices-table th:last-child,
-.prices-table th:last-child {
+.prices-table td:last-child {
     border-radius: 0 15px 15px 0;
 }
 
@@ -317,7 +319,7 @@
 
 .reviews-item-image-wrapper {
     width: 150px;
-    height: 150px;
+    height: 150px; 
     border-radius: 50%;
     overflow: hidden;
 }
@@ -392,9 +394,9 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    border-radius: 15px;
     padding: 20px 40px;
     padding-right: 80px;
+    border-radius: 15px;
     color:#fff;
     font-size: 40px;
     font-weight: 700;
@@ -484,7 +486,7 @@
     color: #fff;
 }
 
-.page-footer.container {
+.page-footer .container {
     padding-right: 390px;
 }
 
